--- a/index.html
+++ b/index.html
@@ -12,12 +12,35 @@
     <h2>Eyesight</h2>
     <p>Mantis shrimps are predators which kill their prey by hitting them at high speed. They have large complex eyes and are highly coloured.
      </p>
-     <p>Mantis shrimps have two methods of attack; they can be spearers or smashers.</p>
+     <p>Mantis shrimps have two methods of attack; they can be <b>spearers</b> or <b>smashers</b>.</p>
      <p>They strike by rapidly unfolding and swinging their claws at the prey, and can cause serious damage on victims larger than themselves.</p>
      <p>Their eyes are mounted on mobile stalks and constantly move about independently of each other.They are considered to be the most complex eyes in the animal kingdom. </p>
      <p>The mantis shrimp has such good eyes that it can perceive both polarized light, and color vision outside the normal visual spectrum.</p>
      <p>Source: <a href="https://simple.wikipedia.org/wiki/Mantis_shrimp">Wikipedia</a></p>
      <img src="http://i.imgur.com/tPT0bDo.jpg">
+     <table>
+         <caption>Types of color-receptive cones present in the eye</caption>
+         <tr>
+             <th>species</th>
+             <th>types of cones</th>
+         </tr>
+         <tr>
+             <th>dogs</th>
+             <th>2</th>
+         </tr>
+         <tr>
+             <th>humans</th>
+             <th>3</th>
+         </tr>
+         <tr>
+             <th>butterflies</th>
+             <th>5</th>
+         </tr>
+         <tr>
+             <th>mantis shrimp</th>
+             <th>16</th>
+         </tr>
+     </table>
      
 </body>
 </html>
