--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h1>True facts about the mantis shrimp</h1>
-    <img src="http://i.imgur.com/tPT0bDo.jpg">
+    <img src="http://i.imgur.com/tPT0bDo.jpg" alt="sáskarák">
     <h2>Attack</h2>
     <p>Mantis shrimps have two methods of attack; they can be <b>spearers</b> or <b>smashers</b>.</p>
     <p>They strike by rapidly unfolding and swinging their claws at the prey, and can cause serious damage on victims larger than themselves.</p>
     <h2>Eyesight</h2>
     <p>Mantis shrimps are predators which kill their prey by hitting them at high speed. They have large complex eyes and are highly coloured.</p>
-     <p>Their eyes are mounted on mobile stalks and constantly move about independently of each other.They are considered to be the most complex eyes in the animal kingdom. </p>
-     <p>The mantis shrimp has such good eyes that it can perceive both polarized light, and color vision outside the normal visual spectrum.</p>    
-     <table>
+    <p>Their eyes are mounted on mobile stalks and constantly move about independently of each other.They are considered to be the most complex eyes in the animal kingdom. </p>
+    <p>The mantis shrimp has such good eyes that it can perceive both polarized light, and color vision outside the normal visual spectrum.</p>    
+    <table>
          <caption>Types of color-receptive cones present in the eye</caption>
          <tr>
              <th>species</th>
@@ -38,7 +38,7 @@
              <th>mantis shrimp</th>
              <th>16</th>
          </tr>
-     </table>
-     <p>Source: <a href="https://simple.wikipedia.org/wiki/Mantis_shrimp">Wikipedia</a></p>
+    </table>
+    <p>Source: <a href="https://simple.wikipedia.org/wiki/Mantis_shrimp">Wikipedia</a></p>
 </body>
 </html>
